# fnnls

./: .gitignore  Cargo.toml  README.md  fnnls.py
benches/: fnnls.rs  fnnls_benchmark.rs
fnnls/: Cargo.toml  LICENSE  fnnls.py
fnnls/src/: fnnls.rs
python/: Cargo.toml  pyproject.toml
python/pyfnnls/: __init__.py
python/src/: lib.rs
src/: fnnls.rs  lib.rs  main.rs
workflows/: CI.yml
