[package]
name = "fnnls"
version = "0.1.0"
authors = ["igmanthony"]
edition = "2018"
license = "MIT"
readme = "README.md"

description = "A port of a FNNLS algorithm"

[dependencies]
ndarray = "*" # currently 0.12.1
ndarray-linalg = { version = "*", features = ["intel-mkl"]} # currently 0.11.1

[dev-dependencies]
criterion = "*" # currently 0.2.11

[[bench]]
name = "fnnls_benchmark"
harness = false