[[bench]]
name = 'fnnls_benchmark'
harness = false

[package]
name = 'fnnls'
version = '0.2.0'
authors = ['igmanthony']
edition = '2018'
license = 'MIT'
readme = 'README.md'
description = 'A port of a FNNLS algorithm'

[dependencies]
ndarray = '0.15.0'

[dependencies.ndarray-linalg]
version = '0.16.0'
features = ['intel-mkl']

[dev-dependencies]
criterion = '0.3.0'
